# mixquest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  index.html  make  run
assets/: README.md  map.tmx  test.lua  tex_color.frag  tex_color.vert  texturize.frag  texturize.vert
code/gameplay/: CMakeLists.txt  Gameplay.deps.h  Gameplay.pch.h
code/gameplay/game/: Game.cpp  Game.h  Map.cpp  Map.h  MapDescription.cpp  MapDescription.h
code/gameplay/messages/: ActorMessages.cpp  ActorMessages.h  CharacterMessages.cpp  CharacterMessages.h  TransformMessages.cpp  TransformMessages.h
code/gameplay/mixins/: Character.cpp  Character.h  Character.mix.h  SelectedActor.cpp  SelectedActor.mix.h  Transform.cpp  Transform.mix.h
code/gameplay/systems/: ActorSystem.cpp  ActorSystem.h  GameplaySystem.h
code/mixquest/: AppState.h  Application.cpp  Application.h  Application_ImGui.cpp  CMakeLists.txt  CharacterNames.cpp  CharacterNames.h  Constants.h  ExplicitSingleton.h  ImplicitSingleton.h  InGameState.cpp  InGameState.h  LoadAllAssetsState.cpp  LoadAllAssetsState.h  Main.cpp  Memory.h  MixQuest.pch.cpp  MixQuest.pch.h  OpenGL.h  TaskManager.cpp  TaskManager.h  Util.cpp  Util.h
code/mixquest/assets/: GlobalAssets.cpp  GlobalAssets.h  LoadTMX.cpp  LoadTMX.h  TexturizeColorMaterial.cpp  TexturizeColorMaterial.h  TexturizeMaterial.cpp  TexturizeMaterial.h
code/mixquest/control/: CharacterControl.cpp  CharacterControl.mix.h
code/mixquest/input/: InputManager.h
code/mixquest/map/: MapRendering.cpp  MapRendering.h  MapRenderingTmx.cpp
code/mixquest/messages/: RenderingMessages.cpp  RenderingMessages.h
code/mixquest/mixins/: CharacterRendering.cpp  CharacterRendering.mix.h  HealthBar.cpp  HealthBar.mix.h  KeyboardControl.cpp  KeyboardControl.mix.h  SelectionMark.cpp  SelectionMark.mix.h
code/mixquest/plugins/: HotswapFSWatcher.cpp  HotswapFSWatcher.h  PluginManager.cpp  PluginManager.h
code/mixquest/plugins/FileWatcher/: FileWatcherImpl.h  FileWatcherOSX.cpp  FileWatcherWin32.cpp
code/mixquest/rendering/: GLSentries.h  GPUProgram.cpp  GPUProgram.h  GPUProgramPtr.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderPtr.h  ShaderType.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TexturePtr.h  Tileset.cpp  Tileset.h  Vertex.h
code/mixquest/scripting/: ScriptManager.cpp  ScriptManager.h
code/mixquest/systems/: RenderingSystem.cpp  RenderingSystem.h
code/plugins/: Plugin.inl  PluginDef.h
code/plugins/ai/: AI.cpp  AI.mix.h  AI.pch.cpp  AI.pch.h  AI.plugin.h  CMakeLists.txt
src/client/: CMakeLists.txt  Constants.h  InGameState.cpp  InGameState.h  LoadAllAssetsState.cpp  LoadAllAssetsState.h  MixQuest.cpp  MixQuest.h  MixQuest.pch.h
src/client/assets/: GlobalAssets.cpp  GlobalAssets.h  LoadTMXTask.cpp  LoadTMXTask.h  RetainTextureTask.cpp  RetainTextureTask.h  TexturizeColorMaterial.cpp  TexturizeColorMaterial.h  TexturizeMaterial.cpp  TexturizeMaterial.h
src/client/control/: CharacterControl.mix.h
src/client/input/: InputManager.h
src/client/map/: MapRendering.cpp  MapRendering.h  MapRenderingTmx.cpp
src/client/messages/: RenderingMessages.cpp  RenderingMessages.h
src/client/mixins/: CharacterRendering.cpp  HealthBar.cpp  KeyboardControl.cpp  SelectionMark.cpp
src/client/plugins/: PluginManager.cpp  PluginManager.h
src/client/plugins/FileWatcher/: FileWatcherLinux.cpp  README.md
src/client/rendering/: Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Vertex.h
src/client/scripting/: ScriptManager.cpp  ScriptManager.h
src/client/systems/: RenderingSystem.cpp
src/gameplay/: CMakeLists.txt  Gameplay.deps.h  Gameplay.pch.cpp  Gameplay.pch.h
src/gameplay/game/: Game.cpp  Game.h  Map.cpp  Map.h  MapDescription.cpp  MapDescription.h
src/gameplay/messages/: ActorMessages.cpp  ActorMessages.h  CharacterMessages.cpp  CharacterMessages.h  TransformMessages.h
src/gameplay/mixins/: Character.cpp  Character.h  Character.mix.h  SelectedActor.cpp  SelectedActor.mix.h  Transform.mix.h
src/gameplay/systems/: ActorSystem.cpp  ActorSystem.h  GameplaySystem.cpp  GameplaySystem.h
src/plugins/: Plugin.inl
src/plugins/ai/: AI.cpp  AI.entrypoint.cpp  AI.mix.h  AI.plugin.h  CMakeLists.txt
